[package]
name = "resolve"
version = "0.2.6"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resolve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor"] }
prediction = { version = "0.1.0", path = "../../components/prediction", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
